--- a/Index.html
+++ b/Index.html
@@ -10,6 +10,8 @@
 
 
 <!-- estilos en las imagenes al css
+     footer al final del body
+
 
 
 -->
@@ -20,7 +22,7 @@
     <nav class="navbar navbar-expand-sm bg-dark navbar-rgb(59, 59, 59)">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="Index.html">Home</a>
+            <a class="nav-link" href="Index.html" target="_parent">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="shop.html">Galería</a>
